# ctest-repro

./: .gitignore  CMakeLists.txt
include/: aux_test_functions.h  ex1.h  testes_ordenacao.h
src/: ex1.c
test/: test-ex1.cpp
